fix(style): a stackoverflow logo alignment using em

--- a/_sass/minimal-mistakes/_utilities.scss
+++ b/_sass/minimal-mistakes/_utilities.scss
@@ -299,7 +299,7 @@ body:hover .visually-hidden button {
   // }
 
   .fa-stack-overflow {
-    padding-left: 4px;
+    padding-left: 0.3em;
   }
 
   .fa-tumblr,
